--- a/tools/create/oapi-codegen/stub-templates/imports.tmpl
+++ b/tools/create/oapi-codegen/stub-templates/imports.tmpl
@@ -20,6 +20,7 @@ import (
 
 	"github.com/deepmap/oapi-codegen/pkg/runtime"
 	openapi_types "github.com/deepmap/oapi-codegen/pkg/types"
+	oapimiddleware "github.com/deepmap/oapi-codegen/pkg/chi-middleware"
 	"github.com/getkin/kin-openapi/openapi3"
 	"github.com/go-chi/chi/v5"
 	"github.com/labstack/echo/v4"
