--- a/tools/create/oapi-codegen/templates/chi/chi-interface.tmpl
+++ b/tools/create/oapi-codegen/templates/chi/chi-interface.tmpl
@@ -1,11 +1,10 @@
 // Server represents all server handlers.
 type ServerInterface interface {
+    httpapi.Server
+
 {{range .}}// {{.Spec.Description }}
 // ({{.Method}} {{.Path}})
 {{.OperationId}}(w http.ResponseWriter, r *http.Request{{genParamArgs .PathParams}}{{if .RequiresParamObject}}, params {{.OperationId}}Params{{end}})
 
 {{end}}
-
-// Start the server.
-Start() error
 }
